Fixed horizontal overflow issue with Firefox

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,10 +89,13 @@ html, body {
   width: 100vw;
   height: 100%;
   background-color: rgb(20, 20, 20);
+  scrollbar-width: 0 !important;
 }
 
 body { 
-  margin: 0; 
+  margin: 0;
+  padding: 0 !important;
+  overflow-x: hidden;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
